[Extension] publish version 0.0.2 -> vscode marketplace

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
 	"name": "netron-vscode-extension",
 	"displayName": "netron-vscode-extension",
 	"description": "Implmentation of visualizing ML Models in VSCode using Netron",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"publisher": "DefTruth",
 	"private": true,
 	"license": "MIT",
+	"icon": "docs/logo.png",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/DefTruth/netron-vscode-extension.git"
